@@ -14,6 +14,7 @@ ver 0.17 (2011/??/??)
   - ffmpeg: support libavformat 0.7
   - oggflac: delete this obsolete plugin
 * output:
+  - httpd: support for streaming to a DLNA client
   - osx: allow user to specify other audio devices
   - raop: new output plugin
   - shout: add possibility to set url
